src/tests/fixtures/errors/mismatched-close.hbs
<ul class="list">{{#if items}}<li>x</li>{{/each}}</ul>